--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,7 @@
 <p> Welcome to Chatroom </p>
 
 <script src = "/socket.io/socket.io.js"></script>
-<script>
-    var socket = io();
-    socket.on('connect', ()=>{
-        console.log('connected to server');
-    });
-    //var socket = io();
-    socket.on('disconnect', ()=>{
-        console.log('disconnected from server');
-
-    });
-    </script>
+<script src = "/js/index.js"></script>
 
 </body>
 </html>
